	* src/Editors/_EditFamily.py: comment out unused tab
	* src/plugins/Check.py: get working with childrefs
	* src/DisplayTabs.py: remove debug
 
2006-04-13  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_PedigreeView.py: Adapt to changes in RelLib
	* src/plugins/TestcaseGenerator.py: Adapt to changes in RelLib
	* src/Utils.py: Adapt to changes in RelLib

2006-04-13  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_FamilyView.py: remove bad tab

2006-04-13  Alex Roitman  <shura@gramps-project.org>
	* src/RelLib/_PersonRef.py (serialize): Typo.
	* src/GrampsDb/_GrampsBSDDB.py: Upgrade path to new RelLib.
	* src/RelLib/_Family.py: Require non-empty child_ref.
	* src/Editors/_EditPerson.py (reorder_child_ref_list): Use
	child_ref_list. 
	* src/RelLib/_ChildRef.py (serialize): Typo.

2006-04-13  Don Allingham  <don@gramps-project.org>
	* various: start childref conversion

2006-04-13  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/RelLib/*: fix different typos.
	* src/DataViews/_FamilyView.py: adapt changes in RelLib

2006-04-12  Alex Roitman  <shura@gramps-project.org>
	* src/NameDisplay.py: Add constants to number name components.
	* src/PeopleModel.py: Correct constants.

2006-04-12  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/plugins/GraphViz.py: Add graph preview based on mime (Bug 1449796)

2006-04-12  Alex Roitman  <shura@gramps-project.org>
	* various: Add ChildRef class, reorganize RelLib.
	* src/plugins/Check.py (Check.__init__): Typo.

2006-04-11  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_DbUtils.py (remove_parent_from_family): If
	removing family, also remove it from the child's
	parent_family_list.
	* src/ViewManager.py (ViewManager.change_page): Always toggle the
	sidebar buttons, even if no data is loaded.

	* src/RelLib/_PersonRef.py: Add to repository.
	* src/RelLib/Makefile.am: Ship new file.
	* src/RelLib/_Person.py: Add person_ref_list to store person-to-
	person references.
